--- a/index.html
+++ b/index.html
@@ -1,1 +1,153 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Claude Code完全初心者講座｜特典リンク集</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <style>
+        /* --- 全体のスタイル --- */
+        body {
+            background-color: #1a1a1a; /* 黒系の背景 */
+            color: #ff5722; /* 赤系のオレンジ */
+            font-family: 'VT323', monospace; /* ゲーム風のドットフォント */
+            font-size: 20px;
+            line-height: 1.8;
+            margin: 0;
+            padding: 20px;
+        }
+
+        /* --- コンテンツを囲むコンテナ --- */
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 30px;
+            border: 3px solid #ff5722;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(255, 87, 34, 0.5), inset 0 0 10px rgba(255, 87, 34, 0.3);
+            background-color: #212121;
+        }
+
+        /* --- 見出しのスタイル --- */
+        h1, h2, h3 {
+            text-align: center;
+            text-shadow: 0 0 5px #ff5722, 0 0 8px #ff9800; /* 文字を光らせる */
+            letter-spacing: 2px;
+            margin-bottom: 30px;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            color: #ffc107; /* タイトルは少し目立つ色に */
+        }
+
+        h2 {
+            font-size: 1.5em;
+        }
+
+        h3 {
+            font-size: 1.8em;
+            margin-top: 50px;
+            border-bottom: 2px dotted #ff5722;
+            padding-bottom: 10px;
+        }
+
+        /* --- ソフトウェアリストのスタイル --- */
+        .software-list {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            margin-bottom: 40px;
+        }
+
+        .software-list li {
+            background-color: #333;
+            padding: 8px 15px;
+            border-radius: 5px;
+            border: 1px solid #ff5722;
+        }
+
+        /* --- 動画リンクのリストスタイル --- */
+        .video-list {
+            list-style-type: none; /* デフォルトの点を消す */
+            padding-left: 0;
+            counter-reset: video-counter; /* 番号付けのためにカウンターを初期化 */
+        }
+
+        .video-list li {
+            margin-bottom: 15px;
+            background-color: rgba(255, 87, 34, 0.1);
+            padding: 10px 15px;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+        }
+        
+        /* --- リストの番号を独自に設定 --- */
+        .video-list li::before {
+            counter-increment: video-counter; /* カウンターを1ずつ増やす */
+            content: counter(video-counter) ". "; /* 「番号. 」という形式で表示 */
+            margin-right: 10px;
+            color: #ffc107;
+            font-weight: bold;
+        }
+
+        .video-list li:hover {
+            background-color: rgba(255, 87, 34, 0.2);
+            transform: translateX(5px);
+        }
+
+        /* --- リンクのスタイル --- */
+        a {
+            color: #ff7043; /* 通常のリンク色 */
+            text-decoration: none;
+            transition: all 0.3s ease;
+        }
+
+        a:hover {
+            color: #ffab91; /* ホバー時の色 */
+            text-shadow: 0 0 5px #ffab91;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <!-- メインタイトル -->
+        <h1>MIRAICHI SEMINAR</h1>
+        <h2>Claude Code完全初心者講座｜参加特典リンク集</h2>
+
+        <!-- 設定するソフトウェア -->
+        <h3>-- INSTALL TARGET SOFTWARE --</h3>
+        <ul class="software-list">
+            <li>Vscode</li>
+            <li>WSL2</li>
+            <li>Node.js</li>
+            <li>npm</li>
+            <li>Git</li>
+            <li>Docker</li>
+            <li>Claude Code</li>
+        </ul>
+
+        <!-- 動画リンク集 -->
+        <h3>-- SETUP MOVIE LIST (Total: 65min) --</h3>
+        <ol class="video-list">
+            <li><a href="https://youtu.be/iB7Eare61I0" target="_blank" rel="noopener noreferrer">vscode インストール</a></li>
+            <li><a href="https://youtu.be/XD71lEKBwYs" target="_blank" rel="noopener noreferrer">wsl2のインストール & Ubuntuの初期設定</a></li>
+            <li><a href="https://youtu.be/7Ec-MppLs-o" target="_blank" rel="noopener noreferrer">node.jsとnpmのインストール</a></li>
+            <li><a href="https://youtu.be/tWCBX_7Y13E" target="_blank" rel="noopener noreferrer">gitのインストール</a></li>
+            <li><a href="https://youtu.be/3emg-9x7Bjs" target="_blank" rel="noopener noreferrer">Docker Desktop for Windowsのインストール</a></li>
+            <li><a href="https://youtu.be/vzYF8U3SxAY" target="_blank" rel="noopener noreferrer">CloudCode のインストール</a></li>
+            <li><a href="https://youtu.be/Db_Q__fTqws" target="_blank" rel="noopener noreferrer">VScodeの拡張機能設定</a></li>
+            <li><a href="https://youtu.be/lmTu0OnBSvA" target="_blank" rel="noopener noreferrer">Claude Codeを使ってみる</a></li>
+            <li><a href="https://youtu.be/Xv2De8lYzDk" target="_blank" rel="noopener noreferrer">Claude Codeを使ってみる2</a></li>
+        </ol>
+    </div>
+
+</body>
+</html>
 
