--- a/index.html
+++ b/index.html
@@ -33,18 +33,21 @@
         /* --- 見出しのスタイル --- */
         h1, h2, h3 {
             text-align: center;
-            text-shadow: 0 0 5px #ff5722, 0 0 8px #ff9800; /* 文字を光らせる */
             letter-spacing: 2px;
-            margin-bottom: 30px;
         }
 
         h1 {
             font-size: 2.5em;
             color: #ffc107; /* タイトルは少し目立つ色に */
+            text-shadow: 0 0 7px rgba(255, 152, 0, 0.8); /* ネオン効果を少し抑え、見やすく調整 */
+            margin-bottom: 10px;
         }
 
         h2 {
             font-size: 1.5em;
+            color: #ff8a65; /* サブタイトルは少し明るく、影なしで読みやすく */
+            text-shadow: none;
+            margin-bottom: 50px; /* 次のセクションとの間隔を確保 */
         }
 
         h3 {
@@ -52,6 +55,8 @@
             margin-top: 50px;
             border-bottom: 2px dotted #ff5722;
             padding-bottom: 10px;
+            text-shadow: 0 0 5px #ff5722, 0 0 8px #ff9800; /* 元のネオン効果を維持 */
+            margin-bottom: 30px;
         }
 
         /* --- ソフトウェアリストのスタイル --- */
@@ -118,8 +123,8 @@
 
     <div class="container">
         <!-- メインタイトル -->
-        <h1>MIRAICHI SEMINAR</h1>
-        <h2>Claude Code完全初心者講座｜参加特典リンク集</h2>
+        <h1>Claude Code完全初心者講座</h1>
+        <h2>- 参加特典：Windows初期設定リンク集 -</h2>
 
         <!-- 設定するソフトウェア -->
         <h3>-- INSTALL TARGET SOFTWARE --</h3>
@@ -150,4 +155,3 @@
 
 </body>
 </html>
-
